--- a/src/main/resources/templates/mypage/myPage.html
+++ b/src/main/resources/templates/mypage/myPage.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" media="print" type="text/css" href="https://img.cgv.co.kr/R2014/css/print.css" />
     <link rel="stylesheet" type="text/css" href="https://img.cgv.co.kr/R2014/js/jquery.ui/smoothness/jquery-ui-1.10.4.custom.min.css" />
 
+    <script type="text/javascript" src="/common/js/extraTheaters.js"></script>
     <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/app.config.js"></script>
     <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.tmpl.min.js"></script>
@@ -69,7 +70,6 @@
     <link rel="stylesheet" type="text/css" href="https://img.cgv.co.kr/R2014/css/mypagenew.css" />
 
     <!--/각페이지 Header End-->
-
     <style>
         .cols-content .col-aside {
             width: 180px;
@@ -84,8 +84,6 @@
     <a href="#contents" id="skipHeader">메인 컨텐츠 바로가기</a>
 </div>
 <div id="cgvwrap">
-
-
     <div class="cgv-ad-wrap" id="cgv_main_ad">
         <div id="TopBarWrapper" class="sect-head-ad">
             <div class="top_extend_ad_wrap">
@@ -145,7 +143,6 @@
                                 </p>
 
                                 <button type="button" id="view_usergrade" class="round black"><span>MY 지난등급이력 보기</span></button>
-
                             </div>
                         </div>
                     </div>
@@ -178,7 +175,79 @@
                         </ul>
                     </div>
                 </div>
-                <head th:replace="/mypage/user-detail-th.html"></head>
+                <div class="col-detail" id="mycgv_contents">
+                    <div class="tit-mycgv">
+                        <h3>MY 예매내역</h3>
+                        <p><em>0건</em> <a href="/mypage/user-order">예매내역 더보기</a></p>
+                        <span>예매번호로만 티켓을 찾을 수 있으니 반드시 확인 부탁드립니다.</span>
+                    </div>
+                    <form name="aspnetForm" method="post" action="./" id="aspnetForm" novalidate="novalidate">
+                        <div>
+                            <input type="hidden" name="__EVENTTARGET" id="__EVENTTARGET" value="">
+                            <input type="hidden" name="__EVENTARGUMENT" id="__EVENTARGUMENT" value="">
+                            <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMTc0NzIwMTk3M2RkGpTZbHfO8pvW/Ta9En5loRX6E2E=">
+                        </div>
+
+                        <script type="text/javascript">
+                            //<![CDATA[
+                            var theForm = document.forms['aspnetForm'];
+                            if (!theForm) {
+                                theForm = document.aspnetForm;
+                            }
+                            function __doPostBack(eventTarget, eventArgument) {
+                                if (!theForm.onsubmit || (theForm.onsubmit() != false)) {
+                                    theForm.__EVENTTARGET.value = eventTarget;
+                                    theForm.__EVENTARGUMENT.value = eventArgument;
+                                    theForm.submit();
+                                }
+                            }
+                            //]]>
+                        </script>
+
+
+                        <div>
+
+                            <input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="F268F2D4">
+                            <input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEdAANOZtRado8flmBd6Juf8OumAAaiyC+ogOIlg3pscMtiP2lKUwCIH8TI/sjrTPJzW37qSeqQYBLB9CRMYU4y53rNrIwxzA==">
+                        </div>
+                        <!-- 팝업시작 -->
+                        <!-- 팝업 노출 시 .layer-wrap 에 클래스 .off는 없애고 .on 추가해주세요.-->
+
+
+                        <!-- 팝업끝 -->
+                        <!-- MY 예매내역 -->
+                        <input type="hidden" id="hidCancelReserveNo" name="hidCancelReserveNo">
+                        <div class="sect-base-booking">
+                            <div class="box-polaroid">
+                                <div class="box-inner">
+
+
+
+                                    <div class="lst-item">
+                                        고객님의 최근 예매내역이 존재하지 않습니다.
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                    <div class="sect-mycgv-part">
+                        <div class="box-polaroid type1">
+
+                            <div class="box-inner">
+                                <div class="tit-mycgv">
+                                    <h3>MY 댓글 목록</h3>
+                                    <p><em>0건</em> <a href="/mypage/user-comment">MY 댓글목록 더보기</a></p>
+                                </div>
+                                <div class="col-myqna">
+
+                                    <ul><li>고객님의 1:1 문의내역이 존재하지 않습니다.</li></ul>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> <!-- detail 끝 -->
             </div>
             <script type="text/javascript">
                 //<![CDATA[
