--- a/src/main/resources/templates/mypage/user-edit-password.html
+++ b/src/main/resources/templates/mypage/user-edit-password.html
@@ -8,7 +8,7 @@
 <div id="find_id" class="find_idpw">
   <h1 class="tit">비밀번호변경하기</h1>
   <div class="find-info">
-    <form method="post" action="/mypage/user-edit/password" id="updatePasswordForm">
+    <form method="post" id="updatePasswordForm">
     <table>
       <colgroup>
         <col width="135"><col width="*">
@@ -32,20 +32,30 @@
       </tr>
       </tbody>
     </table>
-        <input type="submit" id="submitButton" class="submit" value="수정하기">
+      <input type="button" id="submitButton" value="수정하기" onclick="submitPassword();">
     </form>
   </div>
+  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
   <script>
-    $(function() {
-      $("#submitButton").click( function() {
-        $('#updatePasswordForm').submit();
-        setTimeout(function() {
-          window.open('', '_self', '');
-          window.close();
-          return false;
-        }, 100);
-      });
-    });
+    function submitPassword(){
+      var password = $("#newPassword").val();
+
+      $.ajax({
+        type:"POST",
+        url:"/mypage/user-edit/password",
+        data : {
+          'password' : password
+        },
+        success: function (data) {
+          alert("success");
+          opener.parent.location.reload();
+          window.open('', '_self').close();
+        },
+        error: function (e) {
+          alert("failed");
+        },
+      })
+    }
   </script>
 </div>
 </body>
