--- a/src/main/resources/templates/mypage/user-edit-name.html
+++ b/src/main/resources/templates/mypage/user-edit-name.html
@@ -43,7 +43,7 @@
 
       $.ajax({
         type:"POST",
-        url:"/mypage/user-edit/name",
+        url:"/member/user-edit/name",
         data : {
           'name' : name
         },
