--- a/src/main/resources/templates/mypage/user-order.html
+++ b/src/main/resources/templates/mypage/user-order.html
@@ -124,28 +124,18 @@
           </div>
           <div class="sect-person-info">
             <h2 class="hidden">개인화 영역</h2>
-            <div class="box-image">
-				<span class="thumb-image">
-					<img src="" alt="권동현님 프로필 사진" onerror="errorImage(this, {'type':'profile'})" />
-					<span class="profile-mask"></span>
-				</span>
-            </div>
             <div class="box-contents newtype">
               <div class="person-info">
                 <strong th:text="${memberDTO.getName()}">이름</strong>
-                <em th:text="${memberDTO.getEmail()}">아이디</em>
-                <span>닉네임 : <i>닉네임을 설정해주세요.</i> </span>
-                <button id="go_edit_page" type="button" title="새창열림">나의 정보 변경</button>
+                <em th:text="${memberDTO.getUserId()}">아이디</em>
               </div>
               <div class="grade-info">
-
                 <p style="margin-bottom:4px;color: #342929;font-family: 'NanumBarunGothicBold', '맑은 고딕', '돋움', Dotum, sans-serif;font-size: 20px;line-height: 20px;">
 
                   고객님은   <strong class="txt-purple">일반</strong> 입니다.
 
                 </p>
 
-                <button type="button" id="view_usergrade" class="round black"><span>MY 지난등급이력 보기</span></button>
               </div>
             </div>
           </div>
@@ -158,19 +148,19 @@
           <div class="snb">
             <ul>
               <li >
-                <a href="/mypage" >MY HOME <i></i></a>
+                <a href="/member" >MY HOME <i></i></a>
               </li>
 
               <li >
-                <a href="/mypage/user-detail" >개인정보 조회 <i></i></a>
+                <a href="/member/user-detail" >개인정보 조회 <i></i></a>
               </li>
 
               <li >
-                <a href="/mypage/user-comment" >내가 쓴 댓글 조회 <i></i></a>
+                <a href="/member/user-comment" >내가 쓴 댓글 조회 <i></i></a>
               </li>
 
               <li >
-                <a href="/mypage/user-order" >예매 내역 조회 <i></i></a>
+                <a href="/member/user-order" >예매 내역 조회 <i></i></a>
               </li>
               <li >
                 <a href="/user/mycgv/event/" title="현재선택">회원 탈퇴(미구현) <i></i></a>
