--- a/src/main/resources/templates/mypage/login.html
+++ b/src/main/resources/templates/mypage/login.html
@@ -13,7 +13,7 @@
             <form class="user" action="/login" method="post">
                 <div class="form-group">
                     <input type="text" class="form-control form-control-user"
-                           id="exampleInputEmail" name="email" aria-describedby="emailHelp"
+                           id="exampleInputEmail" name="userId" aria-describedby="emailHelp"
                            placeholder="ID 입력">
                 </div>
                 <div class="form-group">
