--- a/src/main/resources/templates/mypage/myPage.html
+++ b/src/main/resources/templates/mypage/myPage.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
-
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta http-equiv="Expires" content="-1" />
@@ -13,7 +12,6 @@
     <meta name="description" content="CGV는 선진화된 관람문화와 최고의 서비스로 고객에게 잊을 수 없는 감동을 선사합니다. CGV홈페이지를 통해 영화 예매뿐만 아니라 그 이상의 서비스와 감동을 전달하고, 다양한 즐거움과 특별한 경험을 제공하고자 합니다." />
     <meta property="og:site_name" content="영화 그 이상의 감동. CGV"/>
     <meta id="ctl00_ctl00_og_title" property="og:title" content="나의 참여한 이벤트 &lt; My CGV | 영화 그 이상의 감동. CGV"></meta>
-
 
     <meta id="ctl00_ctl00_og_image" property="og:image" content="https://img.cgv.co.kr/WebApp/images/common/logo_new_kakao_prevw.png"></meta>
     <link rel="alternate" href="http://m.cgv.co.kr" />
@@ -94,24 +92,9 @@
             </div><!-- //.top_extend_ad_wrap -->
         </div>
     </div>
-
-    <!-- S Header
-      Description
-      - class 'nav' 에 class 'active' 추가시 서브메뉴노출
-      - class 'nav' 에 class 'fixed' 추가시 상단고정되며 스타일 변경됨
-   -->
     <head th:replace="/mypage/common/header.html"></head>
-    <!-- E Header -->
-
-    <!-- Contaniner -->
     <div id="contaniner" class=""><!-- 벽돌 배경이미지 사용 시 class="bg-bricks" 적용 / 배경이미지가 없을 경우 class 삭제  -->
-
-
-        <!-- Contents Area -->
         <div id="contents" class="">
-
-
-            <!-- Contents Start -->
             <div class="sect-common" style="height: 300px; margin-top: 25px;">
                 <input type="hidden" id="isTown" name="isTown" value="Y" />
                 <input type="hidden" id="userTownMemberInfo" name="userTownMemberInfo" value="" />
@@ -121,53 +104,39 @@
                     </div>
                     <div class="sect-person-info">
                         <h2 class="hidden">개인화 영역</h2>
-                        <div class="box-image">
-				<span class="thumb-image">
-					<img src="" alt="권동현님 프로필 사진" onerror="errorImage(this, {'type':'profile'})" />
-					<span class="profile-mask"></span>
-				</span>
-                        </div>
                         <div class="box-contents newtype">
                             <div class="person-info">
                                 <strong th:text="${memberDTO.getName()}">이름</strong>
-                                <em th:text="${memberDTO.getEmail()}">아이디</em>
-                                <span>닉네임 : <i>닉네임을 설정해주세요.</i> </span>
-                                <button id="go_edit_page" type="button" title="새창열림">나의 정보 변경</button>
+                                <em th:text="${memberDTO.getUserId()}">아이디</em>
                             </div>
                             <div class="grade-info">
-
                                 <p style="margin-bottom:4px;color: #342929;font-family: 'NanumBarunGothicBold', '맑은 고딕', '돋움', Dotum, sans-serif;font-size: 20px;line-height: 20px;">
-
-                                    고객님은   <strong class="txt-purple">일반</strong> 입니다.
-
+                                    고객님은 <strong class="txt-purple">일반</strong> 입니다.
                                 </p>
-
-                                <button type="button" id="view_usergrade" class="round black"><span>MY 지난등급이력 보기</span></button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
             <div class="cols-content" id="menu">
                 <div class="col-aside">
                     <h2>MY CGV 서브메뉴</h2>
                     <div class="snb">
                         <ul>
                             <li >
-                                <a href="/mypage" >MY HOME <i></i></a>
+                                <a href="/member" >MY HOME <i></i></a>
                             </li>
 
                             <li >
-                                <a href="/mypage/user-detail" >개인정보 조회 <i></i></a>
+                                <a href="/member/user-detail" >개인정보 조회 <i></i></a>
                             </li>
 
                             <li >
-                                <a href="/mypage/user-comment" >내가 쓴 댓글 조회 <i></i></a>
+                                <a href="/member/user-comment" >내가 쓴 댓글 조회 <i></i></a>
                             </li>
 
                             <li >
-                                <a href="/mypage/user-order" >예매 내역 조회 <i></i></a>
+                                <a href="/member/user-order" >예매 내역 조회 <i></i></a>
                             </li>
                             <li >
                                 <a href="/user/mycgv/event/" title="현재선택">회원 탈퇴(미구현) <i></i></a>
@@ -177,8 +146,8 @@
                 </div>
                 <div class="col-detail" id="mycgv_contents">
                     <div class="tit-mycgv">
-                        <h3>MY 예매내역</h3>
-                        <p><em>0건</em> <a href="/mypage/user-order">예매내역 더보기</a></p>
+                        <h3>최근 예매내역</h3>
+                        <p><em th:text="${orderList.size()}">총 0건</em> <a href="/member/user-order">예매내역 더보기</a></p>
                         <span>예매번호로만 티켓을 찾을 수 있으니 반드시 확인 부탁드립니다.</span>
                     </div>
                     <form name="aspnetForm" method="post" action="./" id="aspnetForm" novalidate="novalidate">
@@ -187,62 +156,77 @@
                             <input type="hidden" name="__EVENTARGUMENT" id="__EVENTARGUMENT" value="">
                             <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMTc0NzIwMTk3M2RkGpTZbHfO8pvW/Ta9En5loRX6E2E=">
                         </div>
-
-                        <script type="text/javascript">
-                            //<![CDATA[
-                            var theForm = document.forms['aspnetForm'];
-                            if (!theForm) {
-                                theForm = document.aspnetForm;
-                            }
-                            function __doPostBack(eventTarget, eventArgument) {
-                                if (!theForm.onsubmit || (theForm.onsubmit() != false)) {
-                                    theForm.__EVENTTARGET.value = eventTarget;
-                                    theForm.__EVENTARGUMENT.value = eventArgument;
-                                    theForm.submit();
-                                }
-                            }
-                            //]]>
-                        </script>
-
-
                         <div>
-
                             <input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="F268F2D4">
                             <input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEdAANOZtRado8flmBd6Juf8OumAAaiyC+ogOIlg3pscMtiP2lKUwCIH8TI/sjrTPJzW37qSeqQYBLB9CRMYU4y53rNrIwxzA==">
                         </div>
-                        <!-- 팝업시작 -->
-                        <!-- 팝업 노출 시 .layer-wrap 에 클래스 .off는 없애고 .on 추가해주세요.-->
-
-
-                        <!-- 팝업끝 -->
                         <!-- MY 예매내역 -->
                         <input type="hidden" id="hidCancelReserveNo" name="hidCancelReserveNo">
                         <div class="sect-base-booking">
                             <div class="box-polaroid">
                                 <div class="box-inner">
-
-
-
                                     <div class="lst-item">
-                                        고객님의 최근 예매내역이 존재하지 않습니다.
+                                        <div class="box-number">
+                                            <em>예매번호</em>
+                                            <strong th:text="${recentOrder.getId()}">0056-0102-4966-250</strong>
+                                            <span th:text="${recentOrder.getIndate()}">(2023.01.02)</span>
+                                        </div>
+                                        <div class="box-image">
+                                            <a href="/movies/detail-view/?midx=86072">
+                                                <span class="thumb-image">
+                                                    <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000086/86072/86072_126.jpg" alt="아바타-물의 길(3D) 포스터" onerror="errorImage(this)">
+                                                </span>
+                                            </a>
+                                        </div>
+                                        <div class="box-contents has_not_storeitem">
+                                            <dl>
+                                                <dt>
+                                                    <em th:text="${recentOrder.getMovieName()}">아바타-물의 길(3D)</em>
+                                                </dt>
+                                                <dd>
+                                                    <em>관람극장</em>
+                                                    <strong th:text="${recentOrder.getTheaterName()}">CGV 강남</strong>
+<!--                                                    <a href="javascript:theaterMove('0056');">[극장정보]</a>-->
+                                                </dd>
+                                                <dd>
+                                                    <em>관람일시</em>
+                                                    <strong>2023.01.08(일) 20:00</strong>
+                                                </dd>
+                                                <dd>
+                                                    <em>관람좌석</em>
+                                                    <strong th:text="${recentOrder.getSeat()}">H 14</strong>
+                                                </dd>
+                                            </dl>
+                                        </div>
+                                        <div class="price-n-btns">
+                                            <div class="bd-wrap">
+                                                <dl>
+                                                    <dt>총 결제금액</dt>
+                                                    <dd>
+                                                        <strong class="txt-lightblue" th:text="${recentOrder.getTotalPrice()} + '원'">17,000원</strong>
+                                                    </dd>
+                                                </dl>
+                                                <div class="set-btn">
+                                                    <input type="hidden" class="reserve-no" name="reserve-no" value="Bj2L6yI8Pj08Hr9n6+k4EEF/MJKQmTcD2CKQGs+A4WI=">
+                                                    <button type="button" title="새창" class="round inblack sendsmspopup"><span>문자보내기</span></button>
+                                                    <button type="button" data-status="94" class="round black cancel" onclick="noshowYN('N', '20230108' , '00' , '01'  , '8955.99113719167' , '' , ''  )"><span>예매취소</span></button>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
                     </form>
                     <div class="sect-mycgv-part">
                         <div class="box-polaroid type1">
-
                             <div class="box-inner">
                                 <div class="tit-mycgv">
                                     <h3>MY 댓글 목록</h3>
-                                    <p><em>0건</em> <a href="/mypage/user-comment">MY 댓글목록 더보기</a></p>
+                                    <p><em>0건</em> <a href="/member/user-comment">MY 댓글목록 더보기</a></p>
                                 </div>
                                 <div class="col-myqna">
-
                                     <ul><li>고객님의 1:1 문의내역이 존재하지 않습니다.</li></ul>
-
                                 </div>
                             </div>
                         </div>
@@ -253,49 +237,6 @@
                 //<![CDATA[
                 (function ($) {
                     $(function () {
-
-                        $('#go_edit_page').on('click', function () {
-                            var win = window.open("/user/popup/edit-profile.aspx", "profile", "left=0,top=o,width=445,height=440,toolbar=no,scrollbars=no");
-                            win.focus();
-                        });
-
-                        $('#btn_set_my_favorite').on('click', function () {
-                            var win = window.open("/user/popup/favoriteTheaters.aspx?ismycgv=true", "url", "left=0,top=o,width=645,height=370,toolbar=no,scrollbars=no");
-                            win.focus();
-                        });
-
-                        $('#view_usergrade').on('click', function () {
-                            GetUserGradeList(this);
-                            return false;
-                        });
-
-                        function GetUserGradeList(_this) {
-
-                            var url = '/common/ajax/user.aspx/GetUserGradeList_2017';
-                            var data = null;
-                            var callback = function (result) {
-                                app.log(result);
-
-                                var $std = $(_this),
-                                    options = {
-                                        '$target': $std,
-                                        'html': $('#temp_view_usergrade').html(),
-                                        'position': 'absolute',
-                                        'mask': 'none'
-                                    };
-                                app.instWin.add(options);
-
-                                var $tbody = $('#mytable > tbody:last'),
-                                    $tr1 = $('#tempUserGradeTbodyTr1')
-                                //  $tr2 = $('#tempUserGradeTbodyTr2');
-                                $.each(result, function (i, v) {
-
-                                    $tbody.append("<tr><th scope='row'>" + v.YearMonthSub + "년" + v.MonthSub + "월" + "</th><td>" + v.GradeCode + "</td></tr>");
-
-                                });
-                            }
-                            app.ajax().get({ dataType: 'json', url: url, data: data, contentType: "application/json; charset=utf-8", successHandler: callback });
-                        }
                         //개인화영역스킵
                         $('#skipPersoninfo').on('click', function () {
                             var $ctn = $('#menu');
@@ -321,111 +262,12 @@
 
                     });
                 })(jQuery);
-                //]]>
             </script>
         </div>
-
-
-        <!--/ Contents End -->
     </div>
-    <!-- /Contents Area -->
 </div>
-<!-- E Contaniner -->
-
-<!-- S Popup -->
-
-<!-- E Popup -->
-
-<!-- S 예매하기 및 TOP Fixed 버튼 -->
-<!-- E 예매하기 및 TOP Fixed 버튼 -->
-
-<!-- S Footer -->
 <footer>
-
 </footer>
-<!-- E Footer -->
-
-<!-- //Aside Banner -->
 <script type="text/javascript" src="https://img.cgv.co.kr/R2014//js/system/crypto.js"></script>
-
-<script type="text/javascript">
-    //<![CDATA[
-    function closeBanner(){
-        $('#cgv_main_ad').remove();
-        for(var i = 0; i < 2; i++) {
-            window.setTimeout(function(){
-                $(window).resize()
-            }, 30)
-        }
-    }
-    function showPlayEndEvent() {
-        $('#pop_player_relation_wrap').show();
-        $('#btn_movie_replay').focus();
-    }
-
-    (function ($) {
-        $(function () {
-
-
-            $('.movie_player_popup').moviePlayer();     //동영상플레이어
-
-            //노원타운
-            $('.special5_pop').on('click', function () {
-                openNowonTown();
-                return false;
-            });
-            // 검색 auto validate version.
-            $('.btn-go-search').on('click', function () {
-                var $frmSearch = $(this).parent().parent('form');
-                $frmSearch.submit();
-                return false;
-            });
-
-            //메인스킵네비
-            $('#skipHeader').on('click', function(){
-                var $ctn = $('#contents');
-                $ctn.attr({
-                    tabIndex : -1
-                }).focus();
-                return false;
-            });
-
-            //현재 URL 해당파라미터 교체
-            function updateQueryStringParameter(uri, key, value) {
-                var re = new RegExp("([?|&])" + key + "=.*?(&|#|$)", "i");
-                if (uri.match(re)) {
-                    return uri.replace(re, '$1' + key + "=" + value + '$2');
-                } else {
-                    var hash =  '';
-                    var separator = uri.indexOf('?') !== -1 ? "&" : "?";
-                    if( uri.indexOf('#') !== -1 ){
-                        hash = uri.replace(/.*#/, '#');
-                        uri = uri.replace(/#.*/, '');
-                    }
-                    return uri + separator + key + "=" + value + hash;
-                }
-            }
-            //모바일버전 가기
-            $('.go-mobile').on('click', function() {
-                location.replace(updateQueryStringParameter(location.href, "IsMobile", "N"));
-                return false;
-            });
-        });
-    })(jQuery);
-
-    function goFamilySite() {
-        var famulySiteURL = $(familysite).val();
-        if (famulySiteURL != "") {
-            var win = window.open(famulySiteURL, 'winFamilySite')
-            win.focus();
-        }
-    }
-    function goFtc() {
-        var ftcUrl = "http://www.ftc.go.kr/bizCommPop.do?wrkr_no=1048145690";
-        window.open(ftcUrl, "bizCommPop", "width=750, height=700, scrollbars=1;");
-    }
-    //]]>
-</script>
-
 </body>
 </html>
