--- a/src/main/resources/templates/mypage/user-detail-th.html
+++ b/src/main/resources/templates/mypage/user-detail-th.html
@@ -5,14 +5,14 @@
     <title>Title</title>
   <script>
     function name_check() {
-      var url = "/mypage/user-edit/name";
+      var url = "/member/user-edit/name";
       var name = "updateName";
       var option = "width = 500, height = 500, top = 100, left = 200, location = no"
       window.open(url, name, option);
     }
 
     function password_check() {
-      var url = "/mypage/user-edit/password";
+      var url = "/member/user-edit/password";
       var name = "updatePassword";
       var option = "width = 500, height = 500, top = 100, left = 200, location = no"
       window.open(url, name, option);
@@ -54,6 +54,12 @@
           <th scope="row">이름</th>
           <td><strong th:text="${memberDTO.getName()}">이름</strong></td>
           <td type="text" id="nameUpdate">&nbsp;<a href="javascript:name_check()">[변경하기]</a></td>
+        </tr>
+
+        <tr>
+          <th scope="row">아이디</th>
+          <td><span th:text="${memberDTO.getUserId()}">아이디</span></td>
+          <td></td>
         </tr>
 
         <tr>
