--- a/src/main/resources/templates/mypage/user-order-th.html
+++ b/src/main/resources/templates/mypage/user-order-th.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -9,7 +9,6 @@
   <div class="tit-mycgv type2">
     <h3>나의 예매내역</h3>
     <p>지난 <em>1개월</em>까지의 예매내역을 확인하실 수 있으며, 영수증은 <em>신용카드 결제 내역</em>만 출력 가능합니다.</p>
-    <a href="/user/movielog/watched.aspx" class="round inblack"><span>내가 본 영화</span></a>
   </div>
   <!-- 팝업시작 -->
   <!-- 팝업 노출 시 .layer-wrap 에 클래스 .off는 없애고 .on 추가해주세요.-->
@@ -24,9 +23,80 @@
       </p>
     </div>
 
-    <div class="lst-item">
-      <div class="box-set-info nodata">
-        고객님의 최근 예매내역이 존재하지 않습니다.
+    <div class="lst-item" th:each="orderDTO: ${orderList}">
+      <div class="box-set-info">
+        <div class="box-number">
+          <em>예매번호</em>
+          <strong th:text="${orderDTO.getId()}">예매번호</strong>
+        </div>
+        <div class="box-info">
+          <div class="box-image">
+            <a href="/movies/detail-view/?midx=86072">
+              <span class="thumb-image">
+                <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000086/86072/86072_126.jpg" alt="아바타-물의 길(3D) 포스터" onerror="errorImage(this)">
+                <!-- 영상물 등급 노출 변경 2022.08.24 -->
+                <i class="cgvIcon etc age12">12</i>
+              </span>
+            </a>
+          </div>
+
+          <div class="detail-area">
+            <div class="reservation-info-wrap">
+              <h2 class="box-contents artHouse">
+                <strong th:text="${orderDTO.getMovieName()}">영화 이름</strong>
+                <span class="res-price" th:text="${orderDTO.getTotalPrice()} + '원'">가 격</span>
+              </h2>
+              <ul class="reservation-mv-info">
+                <li>
+                  <dl>
+                    <dt>관람극장</dt>
+                    <dd th:text="${orderDTO.getTheaterName()}">극장 이름
+                      <a href="javascript:theaterMove('0056');">[극장정보]</a>
+                    </dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>관람인원</dt>
+                    <dd th:text="${orderDTO.getTicketCount()} + '명'"></dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>관람일시</dt>
+                    <dd class="txt-red" th:text="${orderDTO.getIndate()}">기간</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>관람좌석</dt>
+                    <dd th:text="${orderDTO.getSeat()}">좌석</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>상영관</dt>
+                    <dd>3관 8층</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>매수</dt>
+                    <dd th:text="${orderDTO.getTicketCount()}">1매</dd>
+                  </dl>
+                </li>
+              </ul>
+            </div>
+
+          </div>
+        </div>
+<!--        <div class="set-btn">-->
+<!--          <input type="hidden" class="reserve-no" name="reserve-no" value="Bj2L6yI8Pj08Hr9n6+k4EEF/MJKQmTcD2CKQGs+A4WI=">-->
+<!--          <div class="col-edit"></div><div class="col-print"> <button type="button" title="새창" data="Bj2L6yI8Pj08Hr9n6%2bk4EEF%2fMJKQmTcD2CKQGs%2bA4WI%3d" class="round inblack hometicket"><span>예매정보 출력</span></button> <button type="button" title="새창" class="round black sendsmspopup"><span>문자보내기</span></button> <button type="button" data-status="94" onclick="noshowYN('N', '20230108', '00', '01', '8956.98654766333', '', '' )" class="round black cancel"><span>예매취소</span></button></div>-->
+<!--        </div>-->
+        <!--
+            e:나의예매내역 출력 수정
+        -->
       </div>
     </div>
   </div>
@@ -51,8 +121,14 @@
         </thead>
         <tbody>
 
+        <tr th:each="cancel:${cancelList}">
+          <td th:text="${cancel.getMovieName()}">아바타-물의 길(3D)</td>
+          <td th:text="${cancel.getTheaterName()}">CGV 강남</td>
+          <td>2023.01.08(일) 20:00</td>
+          <td th:text="${cancel.getIndate()}">2023.01.02(월)</td>
+          <td th:text="${cancel.getTotalPrice()} + '원'"></td>
+        </tr>
 
-        <tr><td colspan="5" class="nodata">고객님의 최근 취소내역이 존재하지 않습니다.</td></tr>
 
         </tbody>
       </table>
