#18 - movie.html, movie_detail.html 추가
html 파일 두개 추가

--- a/src/main/resources/templates/movie_detail.html
+++ b/src/main/resources/templates/movie_detail.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>영화 상세페이지</title>
 </head>
 <body>
-개발완룡 다시
-개발완룡 다시
-개발완룡 다시 마지막
+
+<table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+    <thead>
+    <tr>
+        <th>사용자아이디</th>
+        <th>이름</th>
+        <th>주소</th>
+        <th>연락처</th>
+        <th>이메일</th>
+        <th>성별</th>
+        <th>SNS</th>
+        <th>생년월일</th>
+        <th>가입일</th>
+        <th>상태변경</th>
+    </tr>
+    </thead>
+
+    <tbody id="tbody">
+
+    </tbody>
+</table>
+
 </body>
 </html>
