#6 - mypage 기능 구현
my page 기능 구현

--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -1,11 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title id="ctl00_ctl00_headerTitle">나의 참여한 이벤트 &lt; My CGV | 영화 그 이상의 감동. CGV</title>
+    <link rel="stylesheet" media="all" type="text/css" href="https://img.cgv.co.kr/R2014/css/webfont.css" />
+    <link rel="stylesheet" media="all" type="text/css" href="https://img.cgv.co.kr/R2014/css/reset.css" />
+    <link rel="stylesheet" media="all" type="text/css" href="https://img.cgv.co.kr/R2014/css/layout.css" />
+
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery-1.10.2.min.js"></script>
 </head>
 <body>
-test123123123
-test123123123
+<head th:replace="/mypage/common/header.html"></head>
+
+<div>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+    <p>안녕?</p>
+</div>
 </body>
 </html>
