--- a/src/main/resources/templates/mypage/myPage.html
+++ b/src/main/resources/templates/mypage/myPage.html
@@ -139,7 +139,7 @@
                                 <a href="/member/user-order" >예매 내역 조회 <i></i></a>
                             </li>
                             <li >
-                                <a href="/user/mycgv/event/" title="현재선택">회원 탈퇴(미구현) <i></i></a>
+                                <a href="/member/withdrawal" title="현재선택">회원 탈퇴(미구현) <i></i></a>
                             </li>
                         </ul>
                     </div>
@@ -147,7 +147,7 @@
                 <div class="col-detail" id="mycgv_contents">
                     <div class="tit-mycgv">
                         <h3>최근 예매내역</h3>
-                        <p><em th:text="${orderList.size()}">총 0건</em> <a href="/member/user-order">예매내역 더보기</a></p>
+                        <p><em th:if="${orderList != null}" th:text="${orderList.size()}">총 0건</em> <a href="/member/user-order">예매내역 더보기</a></p>
                         <span>예매번호로만 티켓을 찾을 수 있으니 반드시 확인 부탁드립니다.</span>
                     </div>
                     <form name="aspnetForm" method="post" action="./" id="aspnetForm" novalidate="novalidate">
@@ -168,8 +168,8 @@
                                     <div class="lst-item">
                                         <div class="box-number">
                                             <em>예매번호</em>
-                                            <strong th:text="${recentOrder.getId()}">0056-0102-4966-250</strong>
-                                            <span th:text="${recentOrder.getIndate()}">(2023.01.02)</span>
+                                            <strong th:if="${recentOrder != null}" th:text="${recentOrder.id}">0056-0102-4966-250</strong>
+                                            <span th:if="${recentOrder != null}" th:text="${recentOrder.indate}">(2023.01.02)</span>
                                         </div>
                                         <div class="box-image">
                                             <a href="/movies/detail-view/?midx=86072">
@@ -181,20 +181,20 @@
                                         <div class="box-contents has_not_storeitem">
                                             <dl>
                                                 <dt>
-                                                    <em th:text="${recentOrder.getMovieName()}">아바타-물의 길(3D)</em>
+                                                    <em th:if="${recentOrder != null}" th:text="${recentMovie}">아바타-물의 길(3D)</em>
                                                 </dt>
                                                 <dd>
                                                     <em>관람극장</em>
-                                                    <strong th:text="${recentOrder.getTheaterName()}">CGV 강남</strong>
+                                                    <strong th:if="${recentOrder != null}" th:text="${recentTheater}">CGV 강남</strong>
 <!--                                                    <a href="javascript:theaterMove('0056');">[극장정보]</a>-->
                                                 </dd>
                                                 <dd>
                                                     <em>관람일시</em>
-                                                    <strong>2023.01.08(일) 20:00</strong>
+                                                    <strong th:if="${recentOrder != null}" th:text="${recentOrder.getScreenDate()}">2023.01.08(일) 20:00</strong>
                                                 </dd>
                                                 <dd>
                                                     <em>관람좌석</em>
-                                                    <strong th:text="${recentOrder.getSeat()}">H 14</strong>
+                                                    <strong th:if="${recentOrder != null}" th:text="${recentOrder.getSeat()}">H 14</strong>
                                                 </dd>
                                             </dl>
                                         </div>
@@ -203,7 +203,7 @@
                                                 <dl>
                                                     <dt>총 결제금액</dt>
                                                     <dd>
-                                                        <strong class="txt-lightblue" th:text="${recentOrder.getTotalPrice()} + '원'">17,000원</strong>
+                                                        <strong class="txt-lightblue"th:if="${recentOrder != null}" th:text="${recentOrder.getTotalPrice()} + '원'">17,000원</strong>
                                                     </dd>
                                                 </dl>
                                                 <div class="set-btn">
@@ -222,11 +222,8 @@
                         <div class="box-polaroid type1">
                             <div class="box-inner">
                                 <div class="tit-mycgv">
-                                    <h3>MY 댓글 목록</h3>
-                                    <p><em>0건</em> <a href="/member/user-comment">MY 댓글목록 더보기</a></p>
-                                </div>
-                                <div class="col-myqna">
-                                    <ul><li>고객님의 1:1 문의내역이 존재하지 않습니다.</li></ul>
+                                    <h3>나의 댓글 목록</h3>
+                                    <p><em th:if="${commentList != null}" th:text="${commentList.size()} + '건'">0건</em> <a href="/member/user-comment">MY 댓글목록 더보기</a></p>
                                 </div>
                             </div>
                         </div>
