#32 - movie_detail 영화 상세페이지 html 구현
리뷰 부분은 제외

--- a/src/main/resources/templates/movie_detail.html
+++ b/src/main/resources/templates/movie_detail.html
@@ -1,31 +1,248 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>영화 상세페이지</title>
-</head>
-<body>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko" lang="ko"><head>
 
-<table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-    <thead>
-    <tr>
-        <th>사용자아이디</th>
-        <th>이름</th>
-        <th>주소</th>
-        <th>연락처</th>
-        <th>이메일</th>
-        <th>성별</th>
-        <th>SNS</th>
-        <th>생년월일</th>
-        <th>가입일</th>
-        <th>상태변경</th>
-    </tr>
-    </thead>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="Expires" content="-1">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-Control" content="No-Cache">
+    <meta http-equiv="imagetoolbar" content="no">
+    <meta name="viewport" content="width=1024">
+    <meta name="keywords" content="CGV, 시지브이, 영화관, 극장, 영화, 티켓, 박스오피스, 극장, Movie, Theater, Cinema, Cgv, cgv, 예매, 상영작">
+    <meta name="description" content="CGV는 선진화된 관람문화와 최고의 서비스로 고객에게 잊을 수 없는 감동을 선사합니다. CGV홈페이지를 통해 영화 예매뿐만 아니라 그 이상의 서비스와 감동을 전달하고, 다양한 즐거움과 특별한 경험을 제공하고자 합니다.">
+    <meta property="og:site_name" content="영화 그 이상의 감동. CGV">
+    <meta id="ctl00_og_title" property="og:title" content="아바타-물의 길 | 영화 그 이상의 감동. CGV">
 
-    <tbody id="tbody">
 
-    </tbody>
-</table>
+    <meta id="ctl00_og_image" property="og:image" content="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000086/86072/86072_185.jpg">
+    <link rel="alternate" href="http://m.cgv.co.kr">
+    <link rel="shortcut icon" href="https://img.cgv.co.kr/theater_img/favicon.ico" type="image/x-icon">
+    <title id="ctl00_headerTitle">[아바타-물의 길]&lt;영화상세 &lt; 영화 | 영화 그 이상의 감동. CGV</title>
+    <link rel="shortcut icon" type="image/x-icon" href="https://img.cgv.co.kr/R2014/images/favicon.ico">
+    <link rel="stylesheet" media="all" type="text/css" href="https://img.cgv.co.kr/R2014/css/webfont.css">
+    <link rel="stylesheet" media="all" type="text/css" href="https://img.cgv.co.kr/R2014/css/reset.css">
+    <link rel="stylesheet" media="all" type="text/css" href="https://img.cgv.co.kr/R2014/css/layout.css">
+    <link rel="stylesheet" media="all" type="text/css" href="https://img.cgv.co.kr/R2014/css/module.css?20211209">
+    <link rel="stylesheet" media="all" type="text/css" href="https://img.cgv.co.kr/R2014/css/content.css">
+    <link rel="stylesheet" media="all" type="text/css" href="https://img.cgv.co.kr/R2014/css/common.css">
 
-</body>
-</html>
+    <link rel="stylesheet" media="all" type="text/css" href="https://img.cgv.co.kr/R2014/css/eggupdate.css">
+    <link rel="stylesheet" media="print" type="text/css" href="https://img.cgv.co.kr/R2014/css/print.css">
+    <link rel="stylesheet" type="text/css" href="https://img.cgv.co.kr/R2014/js/jquery.ui/smoothness/jquery-ui-1.10.4.custom.min.css">
+
+    <script type="text/javascript" async="" src="http://www.googletagmanager.com/gtag/js?id=G-559DE9WSKZ&amp;l=dataLayer&amp;cx=c"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/analytics.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-NNNFR3"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="/common/js/extraTheaters.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/app.config.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.tmpl.min.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.validate.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.paging.min.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.ui/jquery-ui-1.10.4.custom.min.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.utils.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/app.utils.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.utils.pageing.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/app.init.js"></script>
+
+    <!--[if lte IE 9]><script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.placeholder.js"></script><![endif]-->
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.dotdotdot.min.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/silverlight_link.js"></script>
+    <script src="https://img.cgv.co.kr/R2014/js/slick/slick.js" type="text/javascript" charset="utf-8"></script>
+
+    <link rel="stylesheet" media="all" type="text/css" href="https://img.cgv.co.kr/R2014/css/phototicket/phototicket.css">
+    <link rel="stylesheet" media="all" type="text/css" href="https://img.cgv.co.kr/R2014/css/slick.css">
+    <link rel="stylesheet" media="all" type="text/css" href="https://img.cgv.co.kr/R2014/css/slick-theme-custom.css">
+
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/icheck/login.timer.js"></script>
+    <script src="https://img.cgv.co.kr/R2014/js/icheck/icheck.min.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="https://img.cgv.co.kr/R2014/js/icheck/iCheck.css">
+
+    <!-- 2020.05.07 감정지수/프리에그 프로젝트 추가 -->
+    <link rel="stylesheet" media="all" type="text/css" href="https://img.cgv.co.kr/R2014/css/preegg.css">
+
+    <!-- 홈페이지 CSS 일원화로 인한 반영 20220721 -->
+    <link rel="stylesheet" type="text/css" href="https://img.cgv.co.kr/resource_pc/css/cgv.min.css">
+    <script type="text/javascript" src="https://img.cgv.co.kr/resource_pc/js/cgvUi.js"></script>
+
+    <!-- 각페이지 Header Start-->
+
+    <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="https://img.cgv.co.kr/R2014/js/excanvas.min.js"></script><![endif]-->
+    <link href="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.jqplot/jquery.jqplot.min.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.jqplot/jquery.jqplot.min.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.jqplot/jqplot.barRenderer.min.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.jqplot/jqplot.pieRenderer.min.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.jqplot/jqplot.donutRenderer.min.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.jqplot/jqplot.categoryAxisRenderer.min.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.jqplot/jqplot.pointLabels.min.js"></script>
+
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/Chart.custom.js"></script><!-- 평점 개편 스파이더 차트 js 로딩 추가. mwpark_RR2015 -->
+
+    <!-- 2020.05.07 영화 상세 차트 js 로딩 추가 -->
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/amcharts.js"></script>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/radar.js"></script>
+
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014//js/system/system.packed.js"></script></head>
+<body class="" style="">
+
+<div class="skipnaiv">
+    <a href="#contents" id="skipHeader">메인 컨텐츠 바로가기</a>
+</div>
+<div id="cgvwrap">
+
+
+
+    <!-- Contaniner -->
+    <div id="contaniner" class=""><!-- 벽돌 배경이미지 사용 시 class="bg-bricks" 적용 / 배경이미지가 없을 경우 class 삭제  -->
+
+
+        <!-- Contents Area -->
+        <div id="contents" class="">
+            <!-- Contents Start -->
+            <!-- 실컨텐츠 시작 -->
+            <div class="wrap-movie-detail" id="select_main">
+                <div class="sect-base-movie">
+                    <h3><strong id="movie_name"></strong>기본정보</h3>
+                    <div class="box-image">
+                        <a href="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000086/86072/86072_1000.jpg" title="포스터 크게 보기 새창" target="_blank">
+            <span class="thumb-image">
+                <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000086/86072/86072_320.jpg" alt="아바타-물의 길 포스터 새창" onerror="errorImage(this)">
+                <span class="ico-posterdetail">포스터 크게 보기</span>
+
+            </span>
+                        </a>
+                    </div>
+                    <div id="movie_detail_content">
+<!--                    AJAX 로 init() 메서드 실행 시 여기에 영화 상세정보 추가됨    -->
+                        <!--
+                       <div class="box-contents">
+                        <div className="title">
+                            <strong>아바타: 물의 길</strong>
+                            <p>Avatar: The Way of Water</p>
+                        </div>
+                        <div className="score">
+                        </div>
+
+                        <div className="spec">
+                            <dl>
+                                <dt>감독 :&nbsp;</dt>
+                                <dd className="on">제임스 카메론 (James Cameron)</dd>
+                                <dt>배우 :&nbsp;</dt>
+                                <dd className="on">조 샐다나|샘 워싱턴|시고니 위버|스티븐 랭|케이트 윈슬렛|</dd>
+                                <dt>장르 :&nbsp;</dt>
+                                <dd className="on">액션/어드벤처/SF/스릴러/</dd>
+                                <dt>기본정보 :&nbsp;</dt>
+                                <dd className="on">12세이상관람가,&nbsp;192분,&nbsp;미국, 장편</dd>
+                                <dt>개봉 :&nbsp;</dt>
+                                <dd className="on">2022-12-14</dd>
+                                <dt>배급사 :&nbsp;</dt>
+                                <dd className="on">월트디즈니컴퍼니코리아 유한책임회사</dd>
+                            </dl>
+                        </div>
+                       </div>
+                        -->
+
+                    </div>
+                </div><!-- .sect-base -->
+
+                <div class="cols-content" id="menu">
+                    <div class="col-detail">
+
+                            <div class="real-rating">
+                                <input>
+                                <div class="wrap_btn">
+                                    <a class="link-gradewrite" href="javascript:void(0);"><span>평점작성</span></a>
+                                    <a class="link-reviewwrite" href="/movies/point/my-list.aspx"><span>내 평점</span></a>
+                                </div>
+                            </div>
+
+                            <div class="wrap-persongrade">
+                                <!-- 평점 목록 -->
+                                <ul class="point_col2" id="movie_point_list_container">
+                                    <!-- 여기를 반복 -->
+                                    <li class="" data-reportcnt="0" data-spoilercnt="0" id="liCommentFirst33689979"><a
+                                            class="screen_spoiler" href="javascript:return false;">&nbsp;</a>
+                                        <div class="box-contents">
+                                            <ul class="writerinfo">
+                                                <li class="writer-name"><span class=" egg-icon good "></span>za**841018
+                                                </li>
+                                                <li class="writer-etc"><span class="day">2023.01.04</span> <span
+                                                        class="like point_like" data-commentidx="33689979" data-ismygood="false"
+                                                        id="33689979">      <a
+                                                        class="btn_point_like"
+                                                        href="javascript:return false;"><span><img
+                                                        alt="like"
+                                                        class="like_red" src="http://img.cgv.co.kr/R2014/images/point/ico_point_default.png"></span><span
+                                                        id="idLikeValue">0</span></a>     </span></li>
+                                            </ul>
+                                        </div>
+                                        <div class="box-comment"><p>못봄! ㅠ 예매를 잘못해서 못봄! ㅠㅅㅠ</p></div>
+                                    </li>
+                                    <!-- 반복 여기까지 -->
+                                </ul>
+                            </div>
+                        </div><!-- .sect-grade -->
+
+                    </div><!-- .col-detail -->
+
+                </div>
+            </div>
+            <span style="display:none" class="modifyCommentDummy"></span>
+        </div>
+        <!--/ Contents End -->
+    </div>
+    <!-- /Contents Area -->
+</div>
+
+<script>
+
+    let movieCode = [[ ${movieCode} ]]
+
+    $(document).ready(function() {
+        init();
+    });
+
+    function init(){
+        $.ajax({
+            // type: "GET",
+            url: "/api/movie/" + movieCode,
+            // dataType: "json",
+            success: function (data) {
+                let con='';
+
+                con+='<div class="box-contents">';
+                con+='<div class="title">';
+                con+='<strong>'+data.movieNm+'</strong>';
+                con+='<p>'+data.movieNmEn+'</p>';
+                con+='</div>';
+                con+='<div class="score">';
+                con+='</div>';
+                con+='<div class="spec">';
+                con+='<dl>';
+                con+='<dt>감독 :&nbsp;</dt>';
+                con+='<dd class="on">'+data.directorNm+' ('+data.directorNmEn+')</dd>';
+                con+='<dt>배우 :&nbsp;</dt>';
+                con+='<dd class="on">'+data.actorNm+'</dd>';
+                con+='<dt>장르 :&nbsp;</dt>';
+                con+='<dd class="on">'+data.genreNm+'</dd>';
+                con+='<dt>기본정보 :&nbsp;</dt>';
+                con+='<dd class="on">'+data.watchGradeNm+',&nbsp;'+data.showtime+'분,&nbsp;'+data.nationNm+', '+data.typeNm+'</dd>';
+                con+='<dt>개봉 :&nbsp;</dt>';
+                con+='<dd class="on">'+data.openDt+'</dd>';
+                con+='<dt>배급사 :&nbsp;</dt>';
+                con+='<dd class="on">'+data.companyNm+'</dd>';
+                con+='</dl>';
+                con+='</div>';
+                con+='</div>';
+
+                $('#movie_detail_content').html(con);
+
+                $('#movie_name').html(data.movieNm)
+            },
+            error: function(xhr) {
+                console.log("실패다ㅠ");
+                console.log("에러메세지 = " + textStatus);
+                console.log("에러코드 = "+xhr.status);
+            }
+        });
+    }
+
+</script>
+
+</body></html>
